src/main/kotlin/com/example/hhplusweek3/error/PerformanceSeatOccupiedException.kt
package com.example.hhplusweek3.error

class PerformanceSeatOccupiedException(message: String) : BadRequestException(message)

